--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,13 +1,33 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+
+        <% if (username) { %>
+        <form method="POST" action="/logout">
+          <h2>Logged in as: <%= username %> !</h2>
+          <button type="submit">Logout</button>
+        </form>
+        <% } else {%>
+        <form method="POST" action="/login">
+          <input name="username" value="" />
+          <button type="submit">Login</button>
+        </form>
+        <% } %>
       </div>
     </div>
   </nav>
