--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,16 +17,20 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
 
-        <% if (username) { %>
+        <% if (user) { %>
         <form method="POST" action="/logout">
-          <h2>Logged in as: <%= username %> !</h2>
+          <h2>Logged in as: <%= user.email %> !</h2>
           <button type="submit">Logout</button>
         </form>
         <% } else {%>
-        <form method="POST" action="/login">
+          <p>
+            <a href="/register">Register</a>
+            <a href="/login">Login</a>
+          </p>
+        <!-- <form method="POST" action="/login">
           <input name="username" value="" />
           <button type="submit">Login</button>
-        </form>
+        </form> -->
         <% } %>
       </div>
     </div>
