--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -18,7 +18,7 @@
       <div class="card-body">
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">
-          Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
+          Short URL ID: <a href="http://<%= longURL %>"><%= id %></a>
         </p>
         <form method="POST" action="/urls/<%=id%>">
           <input type="text" name="url">
