--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -31,7 +31,7 @@
           <% for (let id in urls) { %>
           <tr>
             <td><%= id %></td>
-            <td><%= urls[id] %></td>
+            <td><%= urls[id].longURL %></td>
             <td>
               <form method="GET" action="/urls/<%=id%>">
                 <button type="submit">Edit</button>
