add header to register/login page

--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -19,6 +19,7 @@
   </head>
 
   <body>
+    <header><%- include('./partials/_header') %></header>
     <h1>Register form</h1>
     <form method="POST" action="/register">
       <input type="email" name="email" value="">
