--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -19,6 +19,7 @@
   </head>
 
   <body>
+    <header><%- include('./partials/_header') %></header>
     <h1>Login</h1>
     <form method="POST" action="/login">
         <input type="email" name="email" value="">
